FIX. Fixes styles for sub-menu elements, adds special class for first column and last element.

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
         <ul class="main-menu">
           <li class="menu-item sub-menu"><a href="catalog.html" class="menu-link">каталог товаров</a>
             <ul class="catalog-submenu">
-              <li class="catalog-item"><a href="#" class="site-link">Виртуальная реальность</a></li>
+              <li class="catalog-item first-column"><a href="#" class="site-link">Виртуальная реальность</a></li>
               <li class="catalog-item"><a href="#" class="site-link">Фитнес-браслеты</a></li>
               <li class="catalog-item"><a href="#" class="site-link">Квадрокоптеры</a></li>
-              <li class="catalog-item"><a href="catalog.html" class="site-link">Моноподы для селфи</a></li>
+              <li class="catalog-item first-column"><a href="catalog.html" class="site-link">Моноподы для селфи</a></li>
               <li class="catalog-item"><a href="#" class="site-link">Умные часы</a></li>
-              <li class="catalog-item"><a href="#" class="site-link">Экшн-камеры</a></li>
+              <li class="catalog-item first-column last-item"><a href="#" class="site-link">Экшн-камеры</a></li>
             </ul>
           </li>
           <li class="menu-item menu-delivery"><a href="#" class="menu-link">доставка</a></li>
